# CRSFLibrary

./: CMakeLists.txt  README.md
exmaple/: CRSF_MessageCheck.cpp
src/: CRSFReader.cpp  CRSFReader.h
src/Messages/: Attitude.h  Battery.h  ChannelsPacked.h  FlightMode.h  Heartbeat.h  LinkStatistics.h  Message.cpp  Message.h  PingRequest.h  PingResponse.h  VerticalSpeed.h
